# rule-engine

./: Dockerfile  README.md  app.py  config.py  pyproject.toml  query_manager.py  requirements.txt  router.py
managers/: fact_manager.py  query_engine_manager.py  query_manager.py  query_manager_factory.py  rule_manager.py
